--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/profile-pic.png" alt="Daniel Bird profile picture">
+            <img 
+                src="./assets/profile-pic.png" 
+                alt="Daniel Bird profile picture"
+                class="profile-pic"
+            >
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
@@ -232,7 +236,7 @@
                         class="project-img"
                     >
                 </div>
-                <h2 class="experience-sub-title project-title">Project One</h2>
+                <h2 class="experience-sub-title project-title">Video Hosting Platform</h2>
                 <div class="btn-container">
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
                         Github (edit link)
@@ -250,7 +254,7 @@
                         class="project-img"
                     >
                 </div>
-                <h2 class="experience-sub-title project-title">Project Two</h2>
+                <h2 class="experience-sub-title project-title">Personal Finance App</h2>
                 <div class="btn-container">
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
                         Github (edit link)
@@ -268,7 +272,7 @@
                         class="project-img"
                     >
                 </div>
-                <h2 class="experience-sub-title project-title">Project Three</h2>
+                <h2 class="experience-sub-title project-title">Workout Tracker</h2>
                 <div class="btn-container">
                     <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
                         Github (edit link)
@@ -320,9 +324,8 @@
                 </ul>
             </div>
         </nav>
-        <p>Copyright &#169; 2024 Daniel Bird. All Rights Reserved.</p>
+        <p>Copyright &#169; 2024 Daniel Bird.</p>
     </footer>
     <script src="script.js"></script>
 </body>
 </html>
-
